tests/ui/issues/issue-22034.stderr
error[E0607]: cannot cast thin pointer `*mut ()` to wide pointer `*mut dyn Fn()`
  --> $DIR/issue-22034.rs:4:15
   |
LL |         &mut *(ptr as *mut dyn Fn())
   |               ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0607`.
